Fix spacing

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1,2 +1,6 @@
 {% include css/bootstrap.min.css %}
 {% include css/grayscale.css %}
+
+.founder-name {
+        padding-top: 15px;
+}
